--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,60 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
-    hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-yaml
--   repo: https://github.com/psf/black-pre-commit-mirror
-    rev: 24.8.0
-    hooks:
-    -   id: black
-        language_version: python3.9
-        args: ["--line-length=79"]
--   repo: https://github.com/pycqa/isort
-    rev: 5.13.2
-    hooks:
-    -   id: isort
--   repo: https://github.com/pycqa/flake8
-    rev: 7.1.1
-    hooks:
-    -   id: flake8
+# -   repo: https://github.com/pre-commit/pre-commit-hooks
+#     rev: v4.6.0
+#     hooks:
+#     -   id: trailing-whitespace
+#     -   id: end-of-file-fixer
+#     -   id: check-yaml
+# -   repo: https://github.com/psf/black-pre-commit-mirror
+#     rev: 24.8.0
+#     hooks:
+#     -   id: black
+#         language_version: python3.9
+#         args: ["--line-length=79"]
+# -   repo: https://github.com/pycqa/isort
+#     rev: 5.13.2
+#     hooks:
+#     -   id: isort
+# -   repo: https://github.com/pycqa/flake8
+#     rev: 7.1.1
+#     hooks:
+#     -   id: flake8
+- repo: https://github.com/nbQA-dev/nbQA
+  rev: 1.7.1
+  hooks:
+   - id: nbqa-black
+     additional_dependencies: [black==24.1.1]
+   - id: nbqa-pyupgrade
+     args: [ --py39-plus ]
+   - id: nbqa-isort
+     additional_dependencies: [isort==5.13.2]
+     args: [--profile=black]
+   - id: nbqa-flake8
+     additional_dependencies: [flake8==7.0.0]
+     args: ["--ignore=E501,W503,F704,E203"]
+   - id: nbqa-mypy
+     additional_dependencies: [mypy==1.8.0]
+     args: ['--ignore-missing-imports', '--disable-error-code=top-level-await']
+- repo: https://github.com/psf/black
+  rev: 24.1.1
+  hooks:
+  - id: black
+- repo: https://github.com/asottile/pyupgrade
+  rev: v3.15.1
+  hooks:
+  -   id: pyupgrade
+- repo: https://github.com/pycqa/isort
+  rev: 5.13.2
+  hooks:
+  - id: isort
+    args: [--profile=black]
+- repo: https://github.com/PyCQA/flake8
+  rev: 7.0.0
+  hooks:
+  - id: flake8
+    args: ["--ignore=E501,W503,F704,E203"]
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: 'v1.9.0'
+  hooks:
+  - id: mypy
+    args: ['--ignore-missing-imports', '--disable-error-code=top-level-await', "--disable-error-code=empty-body"]
