--- a/requirements.txt
+++ b/requirements.txt
@@ -92,3 +92,10 @@ wcwidth==0.2.13
 Werkzeug==3.0.3
 wrapt==1.14.1
 zipp==3.19.2
+nbqa[toolchain]==0.5.0
+pre-commit==3.6.0
+isort==5.13.2
+black==24.1.1
+flake8==7.0.0
+pyupgrade==3.15.0
+mypy==1.8.0
